Refactor package.json and form.html
- Update description in package.json to reflect the purpose of the application
- Remove unnecessary CSS code from styles.css in public/css directory
- Remove position property from form div in form.html
- Update label text for name input field in form.html
- Remove autocomplete attribute from email input field in form.html
- Update title and add styles in index.html
- Import FirstAndLastNameValidator in form.js and validate the name input field
- Update success.html to display user details and add copy functionality to the details

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "l3-app",
   "version": "1.0.0",
-  "description": "App baserad på modulen från L2",
+  "description": "Applikation till valideringsmodulen baserad på modulen från L2",
   "main": "src/app.js",
   "type": "module",
   "scripts": {
